# champions-mcp

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/regulations/: M-A.json
docker/calc/: Dockerfile  bridge.js  server.js
docker/mcp/: Dockerfile  entrypoint.sh
src/champions_mcp/: SKILL.md  __init__.py  cache.py  champions_items.py  champions_movesets.py  champions_roster.py  champions_stats.py  config.py  damage.py  http.py  limitless.py  models.py  names.py  normalize.py  pokeapi.py  regulations.py  server.py
src/champions_mcp/meta/: __init__.py  aggregator.py  base.py  chaos.py  formats.py  smogon.py  smogon_analysis.py
src/champions_mcp/scripts/: __init__.py  prewarm.py
src/champions_mcp/services/: __init__.py  legality.py  teambuilder.py
tests/: conftest.py  test_cache.py  test_damage.py  test_data_files.py  test_items.py  test_legality.py  test_movesets.py  test_names.py  test_regulations.py  test_roster.py  test_stats.py  test_text.py
