[project]
name = "champions-mcp"
version = "0.1.0"
description = "MCP server providing Pokémon Champions data (Pokédex, regulations/legality, tournament & meta stats) for AI-assisted VGC team building."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
champions-mcp = "champions_mcp.server:main"
champions-mcp-prewarm = "champions_mcp.scripts.prewarm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/champions_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
